--- a/bskr2.html
+++ b/bskr2.html
@@ -40,6 +40,31 @@
 <p/>The typeface is the result of Baskerville’s intent to improve upon the types of William Caslon. He increased the contrast between thick and thin strokes, making the serifs sharper and more tapered, and shifted the axis of rounded letters to a more vertical position. The curved strokes are more circular in shape, and the characters became more regular. These changes created a greater consistency in size and form.</p>
 <p/>Baskerville’s work was criticised by jealous competitors and soon fell out of favour. Since the 1920s, however, numerous revivals of Baskerville have been released by Linotype, Monotype, and other type foundries. Émigré released a popular revival of the typeface in 1996 called Mrs Eaves, named for Baskerville’s wife, Sarah Eaves. Baskerville represents the peak of Transitional type face design and bridges the gap between Old Style and Modern type design.</p>
 
+<ul>Foundries that offer versions of Baskerville.
+<br><br>
+<li><b>Hot type<b></li>
+<li>Deberny & Peignot</li>
+<li>Fry Foundry</li>
+<li>Lanston Monotype</li>
+<li>American Type Founders</li>
+<li>Linotype</li>
+<br>
+
+<li><b>Cold type<b></li>
+<li>Berthold</li>
+<li>Autologic</li>
+<li>Compugraphic</li>
+<li>Hell AG</li>
+<li>Monotype</li>
+<br>
+
+<li><b>Digital type<b></li>
+<li>Monotype</li>
+<li>Bitstream</li>
+<li>URW++</li>
+<li>Linotype</li>
+<ul/>
+
 <h3 id="mrs-eaves">Mrs Eaves</h3>
 <p>Mrs Eaves is named after Sarah Eaves, the woman who became John Baskerville’s wife. As Baskerville was setting up his printing and type business, Mrs. Eaves moved in with him as a live-in housekeeper, eventually becoming his wife after the death of her first husband, Mr. Eaves. Mrs Eaves is a revival of the types of English printer and punchcutter John Baskerville, and is related to contemporary Baskerville typefaces.</p>
 <p>Like Baskerville, Mrs Eaves, cut by Zuzana Licko of Émigré, has a near vertical stress, departing from the Old Style model. Identifying characters, similar to Baskerville’s types, are the lowercase g with its open lower counter and swash-like ear. Both the roman and italic uppercase Q have a flowing swash-like tail. The uppercase C has serifs at top and bottom; there is no serif at the apex of the central junction in uppercase W; and the uppercase G has a sharp spur suggesting a vestigial serif.</p>
